Alignment Fix

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -132,8 +132,6 @@ h3 {
   height:100%;
 	height: -webkit-fill-available;
 	height: fill-available;
-  position: relative;
-  align-items: center;
   background-color:  #ff6a56;
   background-position: center center;
   background-repeat: no-repeat;
@@ -141,6 +139,7 @@ h3 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+	overflow: hidden;
 }
 
 .masthead3 {
